# nocuous

./: .eslintrc.json  .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  cli.js  cli.ts  deno.json  import_map.json  index.js  intern.json  mod.ts  npm_build.ts  package.json  test.ts  tsconfig.json  tsconfig.lib.json  tsconfig.tests.json
.github/workflows/: ci.yml
lib/: nocuous.generated.js  nocuous_bg.wasm
output/: package.json
output/src/: index.js  project.js  util.js
output/src/commands/: stat.js
output/src/reports/: console.js  consoleTable.js
output/src/stats/: anonInnerLength.js  binaryExpressionComplexity.js  classDataAbstractionCoupling.js  classFanOutComplexity.js  config.json  cyclomaticComplexity.js  fileLength.js  functionLength.js  loader.js  missingSwitchDefault.js  (+3 more)
output/tests/: index.js
src/: analysis.rs  context.rs  index.ts  interfaces.d.ts  lib.rs  load.ts  project.rs  project.ts  resolve.rs  stats.rs  util.ts  walker.rs
src/commands/: stat.ts
src/fixtures/: a.ts  b.ts  c.tsx  index.js
src/reports/: console.ts  consoleTable.ts  csv.ts  table.ts
src/stats/: anonInnerLength.ts  anon_inner_length.rs  binaryExpressionComplexity.ts  binary_expression_complexity.rs  classDataAbstractionCoupling.ts  classFanOutComplexity.ts  class_data_abstraction_coupling.rs  config.json  cyclomaticComplexity.ts  cyclomatic_complexity.rs  fileLength.ts  file_length.rs  functionLength.ts  function_length.rs  loader.ts  methodLength.ts  missingSwitchDefault.ts  missing_switch_default.rs  nestedIfDepth.ts  nestedTryDepth.ts  parameterNumber.ts  parameter_number.rs
tests/: util.ts
tests/fixtures/: a.ts  test.ts
tests/unit/: index.ts  util.ts
(+33 files in other folders)
