[package]
name = "nocuous"
version = "1.0.2"
edition = "2021"
description = "Wasm bindings to peform static analysis of JavaScript and TypeScript code"
authors = ["Kitson P. Kelly"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
name = "nocuous"

[dependencies]
anyhow = "1.0.66"
deno_ast = { version = "0.23.2", features = ["dep_graph", "module_specifier", "view", "visit"] }
futures = "0.3.25"
import_map = "0.13.0"
indexmap = "1.9.2"
js-sys = "0.3.60"
lazy_static = "1.4.0"
regex = "1.7.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
url = "2.3.1"
wasm-bindgen = { version = "0.2.81", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.33"

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "s"
